# lcd

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: lcd.c
src/include/pico/: lcd.h
